# bookmark_organizer

./: README.md  TODO.md  llama31-8b-extended.modelfile  pyproject.toml  requirements.txt
docs/langchain/: bookmarks_opera.html
docs/langchain/core/: whats_new.md
docs/langchain/issues/: common_issues.md
docs/langchain/migration/: pydantic_migration.md
src/agents/: base.py  categorizer.py  parser.py  quality.py  structure.py
src/backend/: app.py
src/frontend/: app.py
src/parsers/: base.py  chrome.py  opera.py
src/storage/: database.py  service.py
src/utils/: chunker.py
tests/: test_chrome_parser.py  test_integration.py
