[tool.poetry]
name = "bookmark-master"
version = "0.1.0"
description = "An AI-powered bookmark organization system using LangChain and Ollama"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = ">=0.3,<0.4"
langchain-community = ">=0.3,<0.4"
langchain-core = ">=0.3,<0.4"
langchain-ollama = ">=0.2,<0.3"
fastapi = "^0.104.1"
streamlit = "^1.28.2"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.23"
pydantic = ">=2,<3"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
aiosqlite = "^0.19.0"
httpx = ">=0.27.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.5"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "C", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
